<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/rating"
        android:icon="@drawable/ic_rating"
        android:title="@string/reyting" />

    <item
        android:id="@+id/written"
        android:icon="@drawable/ic_list"
        android:title="@string/yo_riqnoma" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/sozlamalar" />

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/biz_haqimizda" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/chiqish" />


</menu>