<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/check_number_dialog_style">

        <TextView
            android:id="@+id/congratulation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/tabriklaymiz"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_18sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/testni_muvaffaqiyatli_yakunladingiz"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/congratulation" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/to_g_ri_javoblar_soni"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintLeft_toLeftOf="@id/text"
            app:layout_constraintTop_toBottomOf="@id/text" />

        <TextView
            android:id="@+id/count_of_correct_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/_1"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="@id/text2"
            app:layout_constraintLeft_toRightOf="@id/text2"
            app:layout_constraintTop_toTopOf="@id/text2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/chiqish"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>