<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/check_number_dialog_style"
        android:orientation="vertical">

        <TextView
            android:id="@+id/asda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/xurmatli"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintBottom_toTopOf="@id/user_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_italic"
            android:text="@string/user_name"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toTopOf="@id/joining_a_new_group"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/asda" />

        <TextView
            android:id="@+id/joining_a_new_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/siz_bilan_tez_orada_bog_lanamiz"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>