<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_margin="@dimen/_15sdp"
        android:background="@drawable/check_number_dialog_style">

        <TextView
            android:id="@+id/number_is_correct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sahifangizdan_chiqishni_xohlaysizmi"
            android:textStyle="bold"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/no"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/yo_q"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yes"
            style="@style/MaterialButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="@dimen/_8sdp"
            android:paddingTop="@dimen/_3sdp"
            android:paddingEnd="@dimen/_8sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:text="@string/ha"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>