<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".main.fragments.courses.JoiningAnExistingGroupFragment">

    <!--Action bar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            style="@style/TintColorForImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_3sdp"
            android:text="@string/app_name"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shapeable_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:fontFamily="@font/montserrat_regular"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:text="@string/groups_in_courses"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tests_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_3sdp"
            android:text="@string/ushbu_kurs_boyicha_testlar_mavjud_emas"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/start_test"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:enabled="false"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_12sdp"
            android:text="@string/testni_boshlash"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>