<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary"
    tools:context=".main.fragments.testing.TestingFragment">

    <!--Action bar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/action_bar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            style="@style/TintColorForImageButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/action_bar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_3sdp"
            android:text="@string/test"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/count_of_solved_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/_1"
            android:layout_marginEnd="@dimen/_1sdp"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/divider"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_1sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/divider"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/count_of_tests"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/count_of_tests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/_20"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/shapeable_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar">

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:padding="@dimen/_3sdp"
            android:text="@string/savol"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/question">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_answer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp">

                <RadioButton
                    android:id="@+id/answerA"
                    style="@style/RadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/javob1"
                    tools:ignore="RtlSymmetry" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp">

                <RadioButton
                    android:id="@+id/answerB"
                    style="@style/RadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/javob1"
                    tools:ignore="RtlSymmetry" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_answer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp">

                <RadioButton
                    android:id="@+id/answerC"
                    style="@style/RadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/javob1"
                    tools:ignore="RtlSymmetry" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_answer4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp">

                <RadioButton
                    android:id="@+id/answerD"
                    style="@style/RadioButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_8sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:text="@string/javob1"
                    tools:ignore="RtlSymmetry" />

            </androidx.cardview.widget.CardView>

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:enabled="false"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_12sdp"
            android:text="@string/keyingi"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_30sdp"
            android:enabled="false"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_12sdp"
            android:text="@string/yakunlash"
            android:textAllCaps="false"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            android:visibility="gone"
            app:cornerRadius="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>